<?xml version="1.0"?>
<package format="2">
  <name>raft</name>
  <version>0.0.1</version>
  <description>RAFT ROS Bridge</description>

  <maintainer email="bauersfeld@ifi.uzh.ch">foehnph</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
